--- a/InspirographScreenSaver/packages/repositories.config
+++ b/InspirographScreenSaver/packages/repositories.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
-  <repository path="..\WpfApplication9\packages.config" />
+  <repository path="..\InspirographScreenSaver\packages.config" />
 </repositories>
