--- a/Spirograph/bower.json
+++ b/Spirograph/bower.json
@@ -7,6 +7,7 @@
     "fontawesome": "4.x",
     "d3": "~3.4.11",
     "jquery-mousewheel": "~3.1.12",
-    "jscrollpane": "~2.0.14"
+    "jscrollpane": "~2.0.14",
+    "spectrum": "~1.5.1"
   }
 }
