--- a/Spirograph/package.json
+++ b/Spirograph/package.json
@@ -9,7 +9,8 @@
     "grunt-contrib-clean": "^0.5.0",
     "grunt-contrib-uglify": "^0.5.1",
     "grunt-dom-munger": "^3.4.0",
-    "grunt-contrib-htmlmin": "^0.3.0"
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-font-awesome-vars": "^1.0.1"
   },
   "engines": {
     "node": ">=0.8.0"
