disabled uploading and gallery for IE 9, new build

--- a/Spirograph/Spirograph.csproj
+++ b/Spirograph/Spirograph.csproj
@@ -50,6 +50,7 @@
     <Content Include="Gruntfile.js" />
     <Content Include="HowToBuild.txt" />
     <Content Include="index.html" />
+    <Content Include="gallery\old-browser.html" />
     <Content Include="old-browser.html" />
     <Content Include="scripts\google-analytics.js" />
     <Content Include="scripts\lib\linq.js" />
