--- a/Spirograph/Spirograph.csproj
+++ b/Spirograph/Spirograph.csproj
@@ -128,6 +128,7 @@
     <TypeScriptCompile Include="scripts\Interaction\KeyboardShortcutManager.ts" />
     <TypeScriptCompile Include="scripts\UI\color-selector.ts" />
     <TypeScriptCompile Include="scripts\UI\custom-color-picker.ts" />
+    <TypeScriptCompile Include="scripts\UI\for-local-testing.ts" />
     <TypeScriptCompile Include="scripts\UI\gear-options-selector.ts" />
     <TypeScriptCompile Include="scripts\UI\initialize-jscrollpane.ts" />
     <TypeScriptCompile Include="scripts\UI\toolbar-controller.ts" />
