--- a/Spirograph/bower.json
+++ b/Spirograph/bower.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "jquery": "~1.x",
-    "bootstrap": "~3.x",
+    "bootstrap": "3.2.0",
     "fontawesome": "4.x",
     "d3": "~3.4.11",
     "jquery-mousewheel": "~3.1.12",
